// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-loader snapshot one.mdx 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

export default ({ components, ...props }) => (
  <MDXTag name="wrapper" components={components}>
    <MDXTag name="h1" components={components}>{\`some heading\`}</MDXTag>
  </MDXTag>
);

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot two.mdx 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

export default ({ components, ...props }) => (
  <MDXTag name="wrapper" components={components}>
    <MDXTag name="h1" components={components}>{\`Two things\`}</MDXTag>
    <MDXTag name="p" components={components}>{\`some paragraph content\`}</MDXTag>
    <MDXTag name="p" components={components}>
      <MDXTag
        name="strong"
        components={components}
        parentName="p"
      >{\`bold\`}</MDXTag>
    </MDXTag>
  </MDXTag>
);

export const _frontmatter = {};

`;
